# mistral

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Analisi su file tuning.txt  Analisi.md  Analisi_Migrazione_OpenAI.md  CLAUDE.md  Dockerfile  Indice_Vettoriale_Spiegazione.md  MIGRATION_SUMMARY.md  Performance_Hardware_Analysis.md  README.md  create_index.py  docker-compose.yml  engine.py  main.py  pyproject.toml  schema.sql
data/: schema.sql
scripts/: create_index.py  debug_retrieval.py  find_caso2.py  find_catena1.py  run_app.py  test_caso2_completo.py  test_errore_comune.py  test_fatturato_regione.py  test_filtro_fat.py  test_vector_store.py
src/mistral/: __init__.py  config.py
src/mistral/core/: __init__.py  engine.py  indexer.py
src/mistral/ui/: __init__.py  app.py  components.py
src/mistral/utils/: __init__.py  auth.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py
